--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "git://github.com/dominictarr/dataclient.git"
   },
   "dependencies": {
+    "column-deck": "0.0.0",
     "marked": "^0.3.5",
     "moment": "^2.11.0"
   },
