--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "column-deck": "0.0.0",
     "marked": "^0.3.5",
-    "moment": "^2.11.0"
+    "moment": "^2.11.0",
+    "suggest-box": "^2.0.0"
   },
   "devDependencies": {},
   "scripts": {
