--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "electro": "0.0.5",
     "marked": "^0.3.5",
     "moment": "^2.11.0",
+    "pull-defer": "^0.2.1",
     "scuttlebot": "^7.5.3",
     "ssb-http": "0.0.0",
     "ssb-links": "^1.0.1",
