--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "electron-prebuilt": "^0.36.10",
     "marked": "^0.3.5",
     "moment": "^2.11.0",
+    "observable": "^2.1.4",
     "pull-defer": "^0.2.1",
     "pull-identify-filetype": "^1.0.2",
+    "pull-scroll": "0.0.0",
     "scuttlebot": "^7.6.4",
     "ssb-http": "0.0.1",
     "ssb-links": "^1.0.1",
+    "ssb-markdown": "^3.0.0",
     "ssb-mentions": "0.0.1",
     "stack": "^0.1.0",
     "suggest-box": "^2.0.0"
