--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "column-deck": "0.0.0",
     "electro": "0.0.5",
     "electron-prebuilt": "^0.36.10",
+    "jade": "^1.11.0",
     "marked": "^0.3.5",
     "moment": "^2.11.0",
     "observable": "^2.1.4",
