--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ssb-links": "^1.0.1",
     "ssb-markdown": "^3.0.0",
     "ssb-mentions": "0.0.1",
+    "ssb-msgs": "^5.2.0",
     "stack": "^0.1.0",
     "suggest-box": "^2.0.0"
   },
