--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "electron-prebuilt": "^0.36.10",
     "jade": "^1.11.0",
     "marked": "^0.3.5",
+    "minimist": "^1.2.0",
     "moment": "^2.11.0",
     "observable": "^2.1.4",
     "pull-defer": "^0.2.1",
@@ -24,6 +25,7 @@
     "ssb-markdown": "^3.0.0",
     "ssb-mentions": "0.0.1",
     "ssb-msgs": "^5.2.0",
+    "ssb-query": "0.0.1",
     "stack": "^0.1.0",
     "suggest-box": "^2.0.0"
   },
