--- a/package.json
+++ b/package.json
@@ -15,23 +15,30 @@
     "marked": "^0.3.5",
     "minimist": "^1.2.0",
     "moment": "^2.11.0",
+    "muxrpc": "^6.3.3",
     "observable": "^2.1.4",
     "pull-defer": "^0.2.1",
     "pull-identify-filetype": "^1.0.2",
-    "pull-scroll": "0.0.0",
+    "pull-scroll": "0.0.1",
+    "pull-serializer": "^0.3.2",
     "pull-stringify": "^1.2.2",
-    "scuttlebot": "^7.6.4",
+    "pull-ws-server": "^1.7.0",
+    "scuttlebot": "^8.0.0",
     "ssb-http": "0.0.1",
     "ssb-links": "^1.0.1",
     "ssb-markdown": "^3.0.0",
     "ssb-mentions": "0.0.1",
     "ssb-msgs": "^5.2.0",
-    "ssb-query": "0.0.1",
+    "ssb-query": "0.0.2",
     "stack": "^0.1.0",
     "suggest-box": "^2.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "brfs": "^1.4.3",
+    "browserify": "^13.0.0"
+  },
   "scripts": {
+    "build": "browserify -t brfs index.js | indexhtmlify --style static/style.css > static/index.html",
     "start": "node server.js & electro index.js",
     "test": "set -e; for t in test/*.js; do node $t; done"
   },
