--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "pull-identify-filetype": "^1.0.2",
     "pull-scroll": "0.0.0",
     "pull-stringify": "^1.2.2",
-    "scuttlebot": "^7.6.4",
+    "scuttlebot": "git+https://github.com/ssbc/scuttlebot.git#23e7009661b3ca7b87310d76fe78f39ffeda0acd",
     "ssb-http": "0.0.1",
     "ssb-links": "^1.0.1",
     "ssb-markdown": "^3.0.0",
