--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
   "scripts": {
     "build": "browserify -t brfs index.js | indexhtmlify --style static/bootstrap.min.css > static/index.html",
     "start": "node server.js & electro index.js",
-    "test": "set -e; for t in test/*.js; do node $t; done"
+    "test": "set -e; for t in test/*.js; do node $t; done",
+    "watch": "watchify server.js -o static/index.html -dv"
   },
   "author": "Dominic Tarr <dominic.tarr@gmail.com> (http://dominictarr.com)",
   "license": "MIT"
 }
-
