--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ssb-mentions": "0.0.1",
     "ssb-msgs": "^5.2.0",
     "ssb-query": "0.0.2",
+    "ssb-ref": "^2.3.0",
     "stack": "^0.1.0",
     "suggest-box": "^2.0.0"
   },
