--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "pull-scroll": "0.0.1",
     "pull-serializer": "^0.3.2",
     "pull-sort": "^1.0.0",
+    "pull-stream": "^3.3.0",
     "pull-stringify": "^1.2.2",
     "pull-ws-server": "^1.7.0",
     "scuttlebot": "git+https://github.com/ssbc/scuttlebot.git#23e7009661b3ca7b87310d76fe78f39ffeda0acd",
+    "ssb-config": "^2.0.0",
     "ssb-http": "0.0.2",
+    "ssb-keys": "^5.0.1",
     "ssb-links": "^2.0.0",
     "ssb-markdown": "^3.0.0",
     "ssb-mentions": "0.0.1",
